@@ -1,0 +1,3 @@
+prog: threadname
+vgopts: --xml=yes --xml-fd=2 --log-file=/dev/null
+stderr_filter: filter_xml
